--- a/BinaryTree/BinaryTree.vcxproj
+++ b/BinaryTree/BinaryTree.vcxproj
@@ -145,6 +145,8 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BaseAction.h" />
+    <ClInclude Include="BinTree.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
