--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
+# Visual Studio files
 .vs/
-Debug/
-ipch/
+*.suo
+*.sdf
+*.opensdf
 *.VC.db
 *.VC.VC.opendb
-Release/
+
+# Any user files
+*.user
+
+# Output files
+bin/
+obj/
+build/
+
