Added class Student and class NamedBinTree

--- a/BinaryTree/BinaryTree.vcxproj
+++ b/BinaryTree/BinaryTree.vcxproj
@@ -147,7 +147,9 @@
   <ItemGroup>
     <ClInclude Include="BaseAction.h" />
     <ClInclude Include="BinTree.h" />
+    <ClInclude Include="NamedBinTree.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Student.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
@@ -158,6 +160,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Student.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
